--- a/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/orders/orders.component.html
@@ -2,7 +2,7 @@
   <h2>Orders</h2>
   <div class="btn-toolbar mb-2 mb-md-0">
     <button mat-raised-button color="green" routerLink="new">
-      <fa-icon icon="plus"></fa-icon>
+      <fa-icon icon="cart-plus"></fa-icon>
        New Order
     </button>
   </div>
