--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -86,6 +86,12 @@ button {
   font-family: Tahoma, Geneva, sans-serif;
 }
 
+.status-shipped {
+  color: red;
+  font-weight: 500;
+  font-family: Tahoma, Geneva, sans-serif;
+}
+
 .status-completed {
   color: green;
   font-weight: 500;
