--- a/client/src/app/modules/auth/modules/customer/components/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/customer/components/order-detail/order-detail.component.html
@@ -60,9 +60,9 @@
                   </mat-form-field>
                 </td>
               </ng-container>
-              <ng-container matColumnDef="subTotal">
+              <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
-                <td mat-cell *matCellDef="let row">{{row.subTotal | currency }}</td>
+                <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
               </ng-container>              
             </table>
           </div>
@@ -134,9 +134,9 @@
                 <th mat-header-cell *matHeaderCellDef> QTY. </th>
                 <td mat-cell *matCellDef="let row;">{{row.quantity.value}}</td>
               </ng-container>
-              <ng-container matColumnDef="subTotal">
+              <ng-container matColumnDef="subtotal">
                 <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
-                <td mat-cell *matCellDef="let row">{{row.subTotal | currency }}</td>
+                <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
               </ng-container>              
             </table>
           </div>
