--- a/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
+++ b/client/src/app/modules/auth/modules/employee/components/orders/order-detail/order-detail.component.html
@@ -14,82 +14,88 @@
     }"> {{order.status | uppercase }} </span></div>
     <div>Created by {{getEmailCreated()}} at {{order.createdAt | date:'short'}}</div>
     <div *ngIf="getEmailUpdated()">Updated by {{getEmailUpdated()}} at {{order.updatedAt | date:'short'}}</div>
-    <div>Client: {{order.client.name}}</div>
-    <div style="margin-top: 10px; margin-bottom: 10px" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="center space-between">
-      <div class="table-responsive">
-        <table mat-table [dataSource]="orderItems">
-          <!-- Row definitions -->
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          <!-- Column definitions -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> ID </th>
-            <td mat-cell *matCellDef="let row">{{row.id}}</td>
-          </ng-container>
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> NAME </th>
-            <td mat-cell *matCellDef="let row">
-              <span *ngIf="row.imageUrl; else noImage">
-                <img src={{row.imageUrl}} height="50" width="50">
-              </span>
-              <ng-template #noImage>
-                <img src='/assets/img/no-picture.png' height="50" width="50">
-              </ng-template>
-               {{row.name}}
-             </td>
-          </ng-container>
-          <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
-            <td mat-cell *matCellDef="let row">{{row.description}}</td>
-          </ng-container>
-          <ng-container matColumnDef="category">
-            <th mat-header-cell *matHeaderCellDef> CATEGORY </th>
-            <td mat-cell *matCellDef="let row">{{row.category}}</td>
-          </ng-container>
-          <ng-container matColumnDef="unitPrice">
-            <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
-            <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice}}&#47;{{row.unit}}</td>
-          </ng-container>
-          <ng-container matColumnDef="quantity">
-            <th mat-header-cell *matHeaderCellDef> QTY. </th>
-            <td mat-cell *matCellDef="let row">
-              <mat-form-field appearance="outline" class="mat-input-qty">
-                <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
-              </mat-form-field>
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="subTotal">
-            <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
-            <td mat-cell *matCellDef="let row">{{row.subTotal | currency }}</td>
-          </ng-container>              
-        </table>
-      </div>
-      <div fxLayout="row" fxLayoutAlign="end">
-        <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
-          <div>
-            Subtotal: {{order.subtotal | currency}}
-          </div>
-          <div>
-            Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
-            </fa-icon>                  
-          </div>
-          <div style="background-color: #F5F5F5">
-            <h3><span style="font-weight: bold">TOTAL</span>: {{order.totalAmount | currency}}</h3>
+    <!-- <div>Client: {{order.client.name}}</div> -->
+    <form [formGroup]="orderFG" class="form-container">
+      <div style="margin-top: 10px; margin-bottom: 10px" fxLayout="column" fxLayoutGap="20px" fxLayoutAlign="center space-between">
+        <mat-form-field appearance="outline">
+          <mat-label>Client</mat-label>
+          <input matInput formControlName="clientInfo" readonly="true">
+        </mat-form-field>
+        <div class="table-responsive">
+          <table mat-table [dataSource]="orderItems">
+            <!-- Row definitions -->
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <!-- Column definitions -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> ID </th>
+              <td mat-cell *matCellDef="let row">{{row.id}}</td>
+            </ng-container>
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef> NAME </th>
+              <td mat-cell *matCellDef="let row">
+                <span *ngIf="row.imageUrl; else noImage">
+                  <img src={{row.imageUrl}} height="50" width="50">
+                </span>
+                <ng-template #noImage>
+                  <img src='/assets/img/no-picture.png' height="50" width="50">
+                </ng-template>
+                 {{row.name}}
+               </td>
+            </ng-container>
+            <ng-container matColumnDef="description">
+              <th mat-header-cell *matHeaderCellDef> DESCRIPTION </th>
+              <td mat-cell *matCellDef="let row">{{row.description}}</td>
+            </ng-container>
+            <ng-container matColumnDef="category">
+              <th mat-header-cell *matHeaderCellDef> CATEGORY </th>
+              <td mat-cell *matCellDef="let row">{{row.category}}</td>
+            </ng-container>
+            <ng-container matColumnDef="unitPrice">
+              <th mat-header-cell *matHeaderCellDef> UNIT PRICE </th>
+              <td mat-cell *matCellDef="let row">&#36;{{row.unitPrice}}&#47;{{row.unit}}</td>
+            </ng-container>
+            <ng-container matColumnDef="quantity">
+              <th mat-header-cell *matHeaderCellDef> QTY. </th>
+              <td mat-cell *matCellDef="let row">
+                <mat-form-field appearance="outline" class="mat-input-qty">
+                  <input matInput type="number" min="0" placeholder="Quantity" [formControl]="row.quantity">
+                </mat-form-field>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="subtotal">
+              <th mat-header-cell *matHeaderCellDef> SUBTOTAL </th>
+              <td mat-cell *matCellDef="let row">{{row.subtotal | currency }}</td>
+            </ng-container>              
+          </table>
+        </div>
+        <div fxLayout="row" fxLayoutAlign="end">
+          <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center">
+            <div>
+              Subtotal: {{order.subtotal | currency}}
+            </div>
+            <div>
+              Fee: {{order.fee | currency}} <fa-icon icon="question-circle" matTooltip="{{explainFee()}}" matTooltipPosition="right">
+              </fa-icon>                  
+            </div>
+            <div style="background-color: #F5F5F5">
+              <h3><span style="font-weight: bold">TOTAL</span>: {{order.totalAmount | currency}}</h3>
+            </div>
           </div>
         </div>
+        <div>
+          <mat-form-field class="full-width">
+            <textarea matInput placeholder="Note/Comment" formControlName="note"></textarea>
+          </mat-form-field>
+        </div>
       </div>
-      <div>
-        <mat-form-field class="full-width">
-          <textarea matInput placeholder="Note/Comment" [(ngModel)]="order.note"></textarea>
-        </mat-form-field>
-      </div>
-    </div>
+    </form>
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-raised-button (click)="close()">Close</button>
-    <button mat-raised-button color="warn" (click)="cancelOrder()" [disabled]="order.status != 'Submitted' && order != 'Processed'">
+    <button mat-raised-button color="warn" (click)="cancelOrder()" [disabled]="order.status != 'Submitted' && order.status != 'Processed'">
       <fa-icon icon="exclamation-circle"></fa-icon> Cancel Order
     </button>
-    <button mat-raised-button color="green" (click)="save()">Save</button>
+    <button mat-raised-button color="green" (click)="save()" [disabled]="!orderFG.dirty">Save</button>
   </mat-card-actions>  
 </mat-card>
